--- a/build-ArtificialNeuroNet_Wrapper-Unnamed-Debug/Makefile
+++ b/build-ArtificialNeuroNet_Wrapper-Unnamed-Debug/Makefile
@@ -15,7 +15,7 @@ CXX           = g++
 DEFINES       = -DQT_CORE_LIB
 CFLAGS        = -m64 -pipe -g -Wall -W -D_REENTRANT -fPIE $(DEFINES)
 CXXFLAGS      = -m64 -pipe -g -std=c++0x -Wall -W -D_REENTRANT -fPIE $(DEFINES)
-INCPATH       = -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++-64 -I../ArtificialNeuroNet_Wrapper -I../ArtificialNeuroNet_Wrapper/include -isystem /usr/include/x86_64-linux-gnu/qt5 -isystem /usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I.
+INCPATH       = -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++-64 -I../ArtificialNeuroNet_Wrapper -I../ArtificialNeuroNet_Wrapper/include -I../include/ -isystem /usr/include/x86_64-linux-gnu/qt5 -isystem /usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I.
 LINK          = g++
 LFLAGS        = -m64
 LIBS          = $(SUBLIBS) -lQt5Core -lpthread 
@@ -47,16 +47,16 @@ OBJECTS_DIR   = ./
 
 SOURCES       = ../ArtificialNeuroNet_Wrapper/main.cpp \
 		../ArtificialNeuroNet_Wrapper/src/DataBuffer.cpp \
-		../ArtificialNeuroNet_Wrapper/src/logwriter.cpp \
-		../ArtificialNeuroNet_Wrapper/src/slevel.cpp \
 		../ArtificialNeuroNet_Wrapper/src/ArtificialNeuroNet.cpp \
-		../ArtificialNeuroNet_Wrapper/src/ANNWrapper.cpp 
+		../ArtificialNeuroNet_Wrapper/src/ANNWrapper.cpp \
+		../ArtificialNeuroNet_Wrapper/src/LogWriter.cpp \
+		../ArtificialNeuroNet_Wrapper/src/SLevel.cpp 
 OBJECTS       = main.o \
 		DataBuffer.o \
-		logwriter.o \
-		slevel.o \
 		ArtificialNeuroNet.o \
-		ANNWrapper.o
+		ANNWrapper.o \
+		LogWriter.o \
+		SLevel.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/shell-unix.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
@@ -116,10 +116,10 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
 		../ArtificialNeuroNet_Wrapper/ArtificialNeuroNet_Wrapper.pro ../ArtificialNeuroNet_Wrapper/main.cpp \
 		../ArtificialNeuroNet_Wrapper/src/DataBuffer.cpp \
-		../ArtificialNeuroNet_Wrapper/src/logwriter.cpp \
-		../ArtificialNeuroNet_Wrapper/src/slevel.cpp \
 		../ArtificialNeuroNet_Wrapper/src/ArtificialNeuroNet.cpp \
-		../ArtificialNeuroNet_Wrapper/src/ANNWrapper.cpp
+		../ArtificialNeuroNet_Wrapper/src/ANNWrapper.cpp \
+		../ArtificialNeuroNet_Wrapper/src/LogWriter.cpp \
+		../ArtificialNeuroNet_Wrapper/src/SLevel.cpp
 QMAKE_TARGET  = ArtificialNeuroNet_Wrapper
 DESTDIR       = #avoid trailing-slash linebreak
 TARGET        = ArtificialNeuroNet_Wrapper
@@ -278,7 +278,7 @@ qmake_all: FORCE
 
 dist: 
 	@test -d .tmp/ArtificialNeuroNet_Wrapper1.0.0 || mkdir -p .tmp/ArtificialNeuroNet_Wrapper1.0.0
-	$(COPY_FILE) --parents $(DIST) .tmp/ArtificialNeuroNet_Wrapper1.0.0/ && $(COPY_FILE) --parents ../ArtificialNeuroNet_Wrapper/include/DataBuffer.h ../ArtificialNeuroNet_Wrapper/include/logwriter.h ../ArtificialNeuroNet_Wrapper/include/slevel.h ../ArtificialNeuroNet_Wrapper/include/config.h ../ArtificialNeuroNet_Wrapper/include/ArtificialNeuroNet.h ../ArtificialNeuroNet_Wrapper/include/ANNWrapper.h .tmp/ArtificialNeuroNet_Wrapper1.0.0/ && $(COPY_FILE) --parents ../ArtificialNeuroNet_Wrapper/main.cpp ../ArtificialNeuroNet_Wrapper/src/DataBuffer.cpp ../ArtificialNeuroNet_Wrapper/src/logwriter.cpp ../ArtificialNeuroNet_Wrapper/src/slevel.cpp ../ArtificialNeuroNet_Wrapper/src/ArtificialNeuroNet.cpp ../ArtificialNeuroNet_Wrapper/src/ANNWrapper.cpp .tmp/ArtificialNeuroNet_Wrapper1.0.0/ && (cd `dirname .tmp/ArtificialNeuroNet_Wrapper1.0.0` && $(TAR) ArtificialNeuroNet_Wrapper1.0.0.tar ArtificialNeuroNet_Wrapper1.0.0 && $(COMPRESS) ArtificialNeuroNet_Wrapper1.0.0.tar) && $(MOVE) `dirname .tmp/ArtificialNeuroNet_Wrapper1.0.0`/ArtificialNeuroNet_Wrapper1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/ArtificialNeuroNet_Wrapper1.0.0
+	$(COPY_FILE) --parents $(DIST) .tmp/ArtificialNeuroNet_Wrapper1.0.0/ && $(COPY_FILE) --parents ../ArtificialNeuroNet_Wrapper/include/DataBuffer.h ../ArtificialNeuroNet_Wrapper/include/ArtificialNeuroNet.h ../ArtificialNeuroNet_Wrapper/include/ANNWrapper.h ../ArtificialNeuroNet_Wrapper/include/Config.h ../ArtificialNeuroNet_Wrapper/include/LogWriter.h ../ArtificialNeuroNet_Wrapper/include/SLevel.h .tmp/ArtificialNeuroNet_Wrapper1.0.0/ && $(COPY_FILE) --parents ../ArtificialNeuroNet_Wrapper/main.cpp ../ArtificialNeuroNet_Wrapper/src/DataBuffer.cpp ../ArtificialNeuroNet_Wrapper/src/ArtificialNeuroNet.cpp ../ArtificialNeuroNet_Wrapper/src/ANNWrapper.cpp ../ArtificialNeuroNet_Wrapper/src/LogWriter.cpp ../ArtificialNeuroNet_Wrapper/src/SLevel.cpp .tmp/ArtificialNeuroNet_Wrapper1.0.0/ && (cd `dirname .tmp/ArtificialNeuroNet_Wrapper1.0.0` && $(TAR) ArtificialNeuroNet_Wrapper1.0.0.tar ArtificialNeuroNet_Wrapper1.0.0 && $(COMPRESS) ArtificialNeuroNet_Wrapper1.0.0.tar) && $(MOVE) `dirname .tmp/ArtificialNeuroNet_Wrapper1.0.0`/ArtificialNeuroNet_Wrapper1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/ArtificialNeuroNet_Wrapper1.0.0
 
 
 clean:compiler_clean 
@@ -317,36 +317,27 @@ compiler_clean:
 
 main.o: ../ArtificialNeuroNet_Wrapper/main.cpp ../ArtificialNeuroNet_Wrapper/include/ANNWrapper.h \
 		../ArtificialNeuroNet_Wrapper/include/DataBuffer.h \
-		../ArtificialNeuroNet_Wrapper/include/ArtificialNeuroNet.h \
-		../ArtificialNeuroNet_Wrapper/include/config.h \
-		../ArtificialNeuroNet_Wrapper/include/logwriter.h \
-		../ArtificialNeuroNet_Wrapper/include/slevel.h
+		../ArtificialNeuroNet_Wrapper/include/ArtificialNeuroNet.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../ArtificialNeuroNet_Wrapper/main.cpp
 
 DataBuffer.o: ../ArtificialNeuroNet_Wrapper/src/DataBuffer.cpp ../ArtificialNeuroNet_Wrapper/include/DataBuffer.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o DataBuffer.o ../ArtificialNeuroNet_Wrapper/src/DataBuffer.cpp
 
-logwriter.o: ../ArtificialNeuroNet_Wrapper/src/logwriter.cpp ../ArtificialNeuroNet_Wrapper/include/logwriter.h \
-		../ArtificialNeuroNet_Wrapper/include/slevel.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o logwriter.o ../ArtificialNeuroNet_Wrapper/src/logwriter.cpp
-
-slevel.o: ../ArtificialNeuroNet_Wrapper/src/slevel.cpp ../ArtificialNeuroNet_Wrapper/include/slevel.h \
-		../ArtificialNeuroNet_Wrapper/include/logwriter.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o slevel.o ../ArtificialNeuroNet_Wrapper/src/slevel.cpp
-
-ArtificialNeuroNet.o: ../ArtificialNeuroNet_Wrapper/src/ArtificialNeuroNet.cpp ../ArtificialNeuroNet_Wrapper/include/ArtificialNeuroNet.h \
-		../ArtificialNeuroNet_Wrapper/include/config.h \
-		../ArtificialNeuroNet_Wrapper/include/logwriter.h \
-		../ArtificialNeuroNet_Wrapper/include/slevel.h
+ArtificialNeuroNet.o: ../ArtificialNeuroNet_Wrapper/src/ArtificialNeuroNet.cpp ../ArtificialNeuroNet_Wrapper/include/ArtificialNeuroNet.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o ArtificialNeuroNet.o ../ArtificialNeuroNet_Wrapper/src/ArtificialNeuroNet.cpp
 
 ANNWrapper.o: ../ArtificialNeuroNet_Wrapper/src/ANNWrapper.cpp ../ArtificialNeuroNet_Wrapper/include/ANNWrapper.h \
 		../ArtificialNeuroNet_Wrapper/include/DataBuffer.h \
-		../ArtificialNeuroNet_Wrapper/include/ArtificialNeuroNet.h \
-		../ArtificialNeuroNet_Wrapper/include/config.h \
-		../ArtificialNeuroNet_Wrapper/include/logwriter.h \
-		../ArtificialNeuroNet_Wrapper/include/slevel.h
+		../ArtificialNeuroNet_Wrapper/include/ArtificialNeuroNet.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o ANNWrapper.o ../ArtificialNeuroNet_Wrapper/src/ANNWrapper.cpp
+
+LogWriter.o: ../ArtificialNeuroNet_Wrapper/src/LogWriter.cpp ../ArtificialNeuroNet_Wrapper/include/LogWriter.h \
+		../ArtificialNeuroNet_Wrapper/include/SLevel.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o LogWriter.o ../ArtificialNeuroNet_Wrapper/src/LogWriter.cpp
+
+SLevel.o: ../ArtificialNeuroNet_Wrapper/src/SLevel.cpp ../ArtificialNeuroNet_Wrapper/include/SLevel.h \
+		../ArtificialNeuroNet_Wrapper/include/LogWriter.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o SLevel.o ../ArtificialNeuroNet_Wrapper/src/SLevel.cpp
 
 ####### Install
 
